# jsonlog

./: .gitignore  Pipfile  README.md  setup.cfg
.github/workflows/: jsonlog-cli.yaml  jsonlog.yaml  test.yaml
examples/: args.py  auto.py  cli.py  extra.py  kwargs.py  mixed.py
jsonlog/: Pipfile  README.md  __init__.py  config.py  formatter.py  logger.py  logging.py  pyproject.toml  setup.cfg
jsonlog-cli/: .gitignore  LICENSE.md  Pipfile  README.md  pyproject.toml  setup.cfg  tox.ini
jsonlog-cli/docs/: example.py
jsonlog-cli/jsonlog_cli/: __init__.py  __main__.py  cli.py  colours.py  config.py  errorhandler.py  key.py  multiline.py  pattern.py  record.py  stream.py  text.py  types.py
jsonlog-cli/jsonlog_cli/tests/: test_colours.py  test_record.py
jsonlog/examples/: error.py  hello.py
jsonlog/jsonlog/: __init__.py  config.py
jsonlog/jsonlog/tests/: capture.py  test_config.py  test_formatter.py
jsonlog/tests/: capture.py  conftest.py  records.py  test_config.py  test_formatter.py  test_logger.py  test_logging.py
jsonlog_cli/: __init__.py  cli.py  colors.py  colours.py  config.py  formatter.py  key.py  multiline.py  pattern.py  record.py  text.py
jsonlog_cli/tests/: test_key.py  test_record.py
legere/: __init__.py  __main__.py  cli.py  record.py
legere/tests/: test_record.py
revelio/: __init__.py  __main__.py  cli.py
