[metadata]
name = jsonlog
version = attr: jsonlog.__version__
description = attr: jsonlog.__doc__
long_description = file: README.md
author = Sam Clements
author-email = sam@borntyping.co.uk
home-page = https://github.com/borntyping/jsonlog
keywords = json, logging
license = MIT License
license-file = LICENSE.md
platform = any
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7

[options]
zip_safe = True
packages = find:
setup_requires =
    setuptools>=41.0.0

[bdist_wheel]
universal = true

[flake8]
max-line-length = 90

[mypy]
python_version = 3.7
ignore_missing_imports = True
