[metadata]
name = legere
version = attr: legere.__version__
description = Human readable formatter for JSON logs.
long_description = file: README.md
long_description_content_type = text/markdown
author = Sam Clements
author-email = sam@borntyping.co.uk
home-page = https://github.com/borntyping/legere
keywords = json, logging
license = MIT License
license-file = LICENSE.md
platform = any
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7

[options]
zip_safe = True
packages = find:
python_requires = >= 3.7
setup_requires =
    setuptools>=41.0.0
install_requires =
    click
    pyyaml

[options.entry_points]
console_scripts =
    legere = legere.cli:main

[bdist_wheel]
universal = true

[flake8]
max-line-length = 90

[mypy]
python_version = 3.7
ignore_missing_imports = True

[tool:pytest]
addopts=--tb=short --verbose
